feat: add routerLink on btns

--- a/src/app/components/rodape/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/components/rodape/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -3,7 +3,7 @@
     <h2 class="ff-inter">
       Meu mural
     </h2>
-    <button class="botao">
+    <button routerLink="/criar-pensamento" class="botao">
       Adicionar pensamento
     </button>
   </header>
