--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -80,7 +80,7 @@
     </div>
     <div class="acoes">
       <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button routerLink="/pensamentos" (click)="cancelar()" class="botao">Cancelar</button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
