--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -2,30 +2,28 @@
   <header class="header">
     <h2>Adicione um <br />novo pensamento</h2>
   </header>
-  <form action="">
+  <form action="" [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
-      name="pensamento"
+      formControlName="conteudo"
       placeholder="Digite o pensamento"
-      [(ngModel)]="pensamento.conteudo"
     />
     <label for="autoria">Autoria</label>
     <input
       type="text"
       class="input"
       id="autoria"
-      name="autoria"
+      formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
     />
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" [(ngModel)]="pensamento.modelo" name="modelo-card" />
+          <input type="radio" id="modelo1" value="modelo1" formControlName="modelo" />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -37,13 +35,20 @@
             src="../../../../../assets/imagens/modelo1.png"
             alt="Aspas azuis"
           />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+          </p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" [(ngModel)]="pensamento.modelo" name="modelo-card" />
+          <input
+            type="radio"
+            id="modelo2"
+            value="modelo2"
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -55,13 +60,20 @@
             src="../../../../../assets/imagens/modelo2.png"
             alt="Aspas azul claro"
           />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+          </p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" [(ngModel)]="pensamento.modelo" name="modelo-card" />
+          <input
+            type="radio"
+            id="modelo3"
+            value="modelo3"
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -73,8 +85,10 @@
             src="../../../../../assets/imagens/modelo3.png"
             alt="Aspas verdes"
           />
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+          </p>
         </div>
       </div>
     </div>
