--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -11,6 +11,15 @@
       formControlName="conteudo"
       placeholder="Digite o pensamento"
     />
+    <div
+      *ngIf="
+        formulario.get('conteudo')?.errors &&
+        formulario.get('conteudo')?.touched
+      "
+      class="mensagem__erro"
+    >
+      Pensamento é obrigatório
+    </div>
     <label for="autoria">Autoria</label>
     <input
       type="text"
@@ -19,11 +28,28 @@
       formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
     />
+    <div
+      *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched"
+      class="mensagem__erro"
+    >
+      Autoria é obrigatória
+    </div>
+    <div
+      *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched"
+      class="mensagem__erro"
+    >
+      Autoria precisa ter no mínimo 3 caractéres
+    </div>
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" formControlName="modelo" />
+          <input
+            type="radio"
+            id="modelo1"
+            value="modelo1"
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -35,9 +61,9 @@
             src="../../../../../assets/imagens/modelo1.png"
             alt="Aspas azuis"
           />
-          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="conteudo">{{ formulario.get("conteudo")?.value || "" }}</p>
           <p class="autoria">
-            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+            <b>{{ formulario.get("autoria")?.value || "" }}</b>
           </p>
         </div>
       </div>
@@ -60,9 +86,9 @@
             src="../../../../../assets/imagens/modelo2.png"
             alt="Aspas azul claro"
           />
-          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="conteudo">{{ formulario.get("conteudo")?.value || "" }}</p>
           <p class="autoria">
-            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+            <b>{{ formulario.get("autoria")?.value || "" }}</b>
           </p>
         </div>
       </div>
@@ -85,15 +111,21 @@
             src="../../../../../assets/imagens/modelo3.png"
             alt="Aspas verdes"
           />
-          <p class="conteudo">{{ formulario.get('conteudo')?.value || '' }}</p>
+          <p class="conteudo">{{ formulario.get("conteudo")?.value || "" }}</p>
           <p class="autoria">
-            <b>{{ formulario.get('autoria')?.value || '' }}</b>
+            <b>{{ formulario.get("autoria")?.value || "" }}</b>
           </p>
         </div>
       </div>
     </div>
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button
+        (click)="criarPensamento()"
+        [disabled]="!formulario.valid"
+        [ngClass]="habilitarBotao()"
+      >
+        Salvar
+      </button>
       <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
