--- a/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -40,6 +40,12 @@
     >
       Autoria precisa ter no mínimo 3 caractéres
     </div>
+    <div
+      *ngIf="formulario.get('autoria')?.errors?.['minusculo'] && formulario.get('autoria')?.touched"
+      class="mensagem__erro"
+    >
+      Esse campo aceita apenas letras minúsculas
+    </div>
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
