--- a/src/app/components/pensamentos/editar-pensamento/editar-pensamento.component.html
+++ b/src/app/components/pensamentos/editar-pensamento/editar-pensamento.component.html
@@ -39,6 +39,12 @@
     >
       Autoria precisa ter no mínimo 3 caractéres
     </div>
+    <div
+      *ngIf="form.get('autoria')?.errors?.['minusculo'] && form.get('autoria')?.touched"
+      class="mensagem__erro"
+    >
+      Esse campo aceita apenas letras minúsculas
+    </div>
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
