--- a/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -1,5 +1,20 @@
 <section class="container">
   <header class="header d-flex">
+    <div class="buscar-pensamentos">
+      <input
+        type="search"
+        class="filtro"
+        placeholder="O que você procura?"
+        autofocus
+        [(ngModel)]="filtro"
+        (keyup)="pesquisarPensamentos()"
+      />
+      <img
+        src="/assets/imagens/icone-pesquisa.png"
+        alt="Lupa azul"
+        style="width: 24px; height: auto"
+      />
+    </div>
     <h2 class="ff-inter">Meu mural</h2>
     <button routerLink="/criar-pensamento" class="botao">
       Adicionar pensamento
