--- a/src/app/components/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/components/pensamentos/pensamento/pensamento.component.html
@@ -1,13 +1,40 @@
-<div class="pensamento {{ pensamento.modelo }} ff-roboto-mono {{ larguraPensamento() }}">
-  <img src="../../../../../assets/imagens/{{ pensamento.modelo }}.png" alt="Aspas coloridas" />
+<div
+  class="pensamento {{ pensamento.modelo }} ff-roboto-mono {{
+    larguraPensamento()
+  }}"
+>
+  <img
+    src="../../../../../assets/imagens/{{ pensamento.modelo }}.png"
+    alt="Aspas coloridas"
+  />
   <p class="conteudo">{{ pensamento.conteudo }}</p>
-  <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+  <p class="autoria">
+    <b>{{ pensamento.autoria }}</b>
+  </p>
   <div class="acoes">
-    <button class="botao-editar" routerLink="/pensamentos/editar/{{ pensamento.id }}">
-      <img src="../../../../../assets/imagens/icone-editar.png" alt="Ícone de editar">
+    <button class="botao-favorito" (click)="atualizarFavoritos()">
+      <img
+        src="assets/imagens/icone-favorito-{{ mudarIconeFavorito() }}.png"
+        alt="Ícone favorito {{ mudarIconeFavorito() }}"
+      />
     </button>
-    <button class="botao-excluir" routerLink="/pensamentos/excluir/{{ pensamento.id }}">
-      <img src="../../../../../assets/imagens/icone-excluir.png" alt="Ícone de excluir">
+    <button
+      class="botao-editar"
+      routerLink="/pensamentos/editar/{{ pensamento.id }}"
+    >
+      <img
+        src="../../../../../assets/imagens/icone-editar.png"
+        alt="Ícone de editar"
+      />
+    </button>
+    <button
+      class="botao-excluir"
+      routerLink="/pensamentos/excluir/{{ pensamento.id }}"
+    >
+      <img
+        src="../../../../../assets/imagens/icone-excluir.png"
+        alt="Ícone de excluir"
+      />
     </button>
   </div>
 </div>
