--- a/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.css
+++ b/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.css
@@ -72,6 +72,16 @@ input[type="search"]::-webkit-search-cancel-button {
   border-radius: 10px;
 }
 
+.botoes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.botoes button {
+  margin-left: 10px;
+  margin-right: 2px;
+}
+
 @media screen and (min-width: 216px) {
   .buscar-pensamentos {
     width: 250px;
