--- a/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -16,13 +16,17 @@
       />
     </div>
     <h2 class="ff-inter">Meu mural</h2>
-    <button routerLink="/criar-pensamento" class="botao">
-      Adicionar pensamento
-    </button>
+    <div class="botoes">
+      <button class="botao" (click)="setFavorito(false)">Meu mural</button>
+      <button class="botao" (click)="setFavorito(true)">Meus favoritos</button>
+      <button routerLink="/criar-pensamento" class="botao">
+        Novo pensamento
+      </button>
+    </div>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0; else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento" (onToggleFavorite)="updateFavorito()"></app-pensamento>
     </div>
   </div>
 </section>
